# mes_proj

./: CMakeLists.txt  main.cpp
classes/: GlobalData.cpp  GlobalData.h
core/: program.cpp  program.h
data/: Test2_4_4_MixGrid.txt  Test3_31_31_kwadrat.txt  test14.txt
helpers/: functions.h  gauss.cpp  gauss.h
structures/: GlobalData.cpp  GlobalData.h  Surface.cpp  Surface.h  elemuniv.cpp  elemuniv.h  grid.cpp  grid.h  jakobian.cpp  jakobian.h  solvSystem.cpp  solvSystem.h  structs.cpp  structs.h
